# miniflow

./: .gitignore  README.md  TensorFlow example.py  basic_linear_regression.ipynb  eminst_test.py  forwardProp_test.py  forward_prop_test.py  logistic_regression.ipynb  logistic_regression_benchmark.ipynb  minst_test.py  multi_linear_regression.ipynb  multi_linear_regression_benchMark.ipynb  pyproject.toml  requirements.txt  setup.py  test.py
Reference/: TensorFlow_example.py  tf_example2.py
examples/: minst_example.py  tf_eminst_cnn_exmaple.py  tf_eminst_example.py  tf_minst_cnn_example.py  tf_minst_example.py  torch_example.py
src/: Layer_class.py  Model_class.py  activation.py  data_processing.py  util.py
src/miniflow/: ConvLayer.py  Layer_class.py  Model_class.py  TensorFlow example.py  __init__.py  activation.py  util.py
src/miniflow.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
test/: GPU test.py  RunAlltest.py  eminst_test.py  forward_prop_test.py  minst_test.py  runAlltest.py  summary_test.py
test/CNN Test/: Conv_unitest.py  basic_func_tests.py  conv_test.py  miniflow_cnn_minst_test.py  minst_cnn_test.ipynb  unitests.py
test/CNN_Test/: miniflow_cnn_minst_test.py  minst_cnn_test.ipynb
test/Dense Layer Test/: eminst_test.py  minst_test.py
test/Dense_Layer_Test/: minst_test.py
test/eminst/: eminst_test.py
tests/: test_util.py
tests/Learning_test/: Learning_test.py  backprop_prototype.py
tests/forwardProp_test/: SoftMax_test.py  forwardProp_test.py  getSoftMax_weights.py  getWeights.ipynb  test_layer.ipynb
weights/RandomWeights/: L1_b.npy  (+5 more)
(+46 files in other folders)
